# XSS_client

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: main.py
src/payloads/: payload_form.txt  payload_form_basic.txt
src/utils/: html_tools.py
