[tool.poetry]
name = "xss-client"
version = "0.1.0"
description = ""
authors = ["PasiniSamuele <samu.pasini98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
bs4 = "^0.0.1"
zss = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
